# SavingsCalculator

./: README.md  interest_caculator.py  interest_calculator.py  pyproject.toml
.github/workflows/: pylint.yml
result_generators/: cli_result_generator.py  html_result_generator.py  pretty_table_helper.py
test/: calculator_test.py  test_calculator.py
