[tool.poetry]
name = "savingscalculator"
version = "0.1.0"
description = "A caclulator that helps calculating savings, given an interest and monthly savings rate"
authors = ["David Grömling <davidgroemling@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
prettytable = "^3.5.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
